# COFNet

./: .gitignore  README.md  pyproject.toml  requirements.txt
Skywatch4-2/: README.roboflow.txt  data.yaml
Skywatch4-2/test/labels/: 4iVswemMKi2MKwpSQsp6n4-1200-80_aug_0_jpg.rf.b2175d4818b34b50e9961cf0c51b9ede.txt  4iVswemMKi2MKwpSQsp6n4-1200-80_aug_11_jpg.rf.1ed9ecdb7cc50eb2fd8096307a963831.txt  4iVswemMKi2MKwpSQsp6n4-1200-80_aug_12_jpg.rf.a0a2464e9ad6ac4acf0e261309f6fdf3.txt  4iVswemMKi2MKwpSQsp6n4-1200-80_aug_1_jpg.rf.f49d634321beab5ff9ccb350dbf6766e.txt  4iVswemMKi2MKwpSQsp6n4-1200-80_aug_2_jpg.rf.b07e9d8d09719332232a7ec9aef54c64.txt  4iVswemMKi2MKwpSQsp6n4-1200-80_aug_5_jpg.rf.13fb36223e659fcd6a2756eabec0cdcf.txt  4iVswemMKi2MKwpSQsp6n4-1200-80_aug_8_jpg.rf.9ce2d644560e5c02c5d090c7f261a164.txt  4iVswemMKi2MKwpSQsp6n4-1200-80_aug_9_jpg.rf.d576cdc09e7773935d1d1d01ee0e6241.txt  (+189 more)
configs/: cofnet_base.yaml  cofnet_skywatch.yaml
docs/: ARCHITECTURE.md  COMPRESSION_INTELLIGENCE_PROPOSAL.md  CONTEXT.md  IMPLEMENTATION.md  NOVELTY_ANALYSIS.md  RESEARCH.md
experiments/: compression_classifier.py  compression_language_model.py  compression_prototype.py  skywatch_compression_detector.py  test_real_skywatch.py  test_real_skywatch_v2.py  test_real_skywatch_v3.py  universal_compression_model.py
notebooks/: train_cofnet_colab.ipynb
scripts/: download_skywatch4_dataset.py  eval.py  inference.py  train.py  train_quick.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  coco_dataset.py
src/kolmogorov/: __init__.py  dsl.py
src/models/: __init__.py  cofnet.py
src/models/backbone/: __init__.py  (+1 more)
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  box_ops.py  coco_eval.py  nms.py
tests/: test_data.py  test_training.py
(+5573 files in other folders)
